--- a/packages/css/src/components/page-menu/page-menu.scss
+++ b/packages/css/src/components/page-menu/page-menu.scss
@@ -17,7 +17,7 @@
 .amsterdam-page-menu {
   align-items: center;
   column-gap: var(--amsterdam-page-menu-column-gap);
-  display: flex;
+  display: inline flex;
   flex-direction: row;
   list-style: none;
   row-gap: var(--amsterdam-page-menu-row-gap);
